# bios

./: CMakeLists.txt  LICENSE  README.md
doc/: Dokumentacija.doc  Prezentacija.pptx  Results.xlsx  Results_2.xlsx
evaluation/: naive_num.py
evaluation/datasets/: banana.lcp  banana.sa  random_1024_1.lcp  random_1024_1.sa  random_1024_1.txt  random_1024_2.lcp  random_1024_2.sa  random_1024_2.txt  random_1024_3.lcp  random_1024_3.sa  random_1024_3.txt  random_1024_4.lcp  random_1024_4.sa  random_1024_4.txt  random_1024_5.lcp  random_1024_5.sa  random_1024_5.txt  random_131072_1.sa  random_131072_1.txt  random_131072_2.sa  random_131072_2.txt  random_131072_3.sa  random_131072_3.txt  random_131072_4.sa  random_131072_4.txt  random_131072_5.sa  random_131072_5.txt  random_2048_1.lcp  random_2048_1.sa  random_2048_1.txt  random_2048_2.lcp  random_2048_2.sa  random_2048_2.txt  random_2048_3.lcp  random_2048_3.sa  random_2048_3.txt  random_2048_4.lcp  random_2048_4.sa  random_2048_4.txt  random_2048_5.lcp  (+47 more)
include/: .gitignore
samples/: cgmemtime  check_samples.py  e_coli_check.py  e_coli_results.csv  mid_res.txt  new_syn_results.csv  old_syn_results.csv  our_syn_results.csv  results_syn_new.csv  results_syn_old.csv
samples/synthetic/: syn_1024_1.txt  syn_1024_10.txt  syn_1024_2.txt  syn_1024_3.txt  syn_1024_4.txt  syn_1024_5.txt  syn_1024_6.txt  syn_1024_7.txt  syn_1024_8.txt  syn_1024_9.txt  syn_1048576_1.txt  syn_1048576_10.txt  syn_1048576_2.txt  syn_1048576_3.txt  syn_1048576_4.txt  syn_1048576_5.txt  syn_1048576_6.txt  syn_1048576_7.txt  syn_1048576_8.txt  syn_1048576_9.txt  syn_128_1.txt  syn_128_10.txt  syn_128_2.txt  syn_128_3.txt  syn_128_4.txt  syn_128_5.txt  syn_128_6.txt  syn_128_7.txt  syn_128_8.txt  syn_128_9.txt  syn_16384_1.txt  syn_16384_10.txt  syn_16384_2.txt  syn_16384_3.txt  syn_16384_4.txt  syn_16384_5.txt  syn_16384_6.txt  syn_16384_7.txt  syn_16384_8.txt  syn_16384_9.txt  (+60 more)
samples/synthetic/generator/: random_sequence_gen.py
src/: SAIS.cpp  SAIS.hpp  StarSuffixStructure.cpp  StarSuffixStructure.hpp  StringSuffixStructure.cpp  StringSuffixStructure.hpp  SuffixStructure.cpp  SuffixStructure.hpp  main.cpp
tests/: StarSuffixStructureTest.cpp  SuffixStructureTest.cpp
